media/nzbget/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nzbget
  namespace: media
  annotations:
    flux.weave.works/tag.nzbget: regexp:^[0-9]+$
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      volumes:
      - name: nzbget
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:nzbget
          targetPortal: 192.168.220.149
          lun: 1
      - name: intermediate
        emptyDir: {}
      - name: media
        persistentVolumeClaim:
          claimName: media
      containers:
      - name: nzbget
        image: linuxserver/nzbget:157
        volumeMounts:
        - name: nzbget
          subPath: config
          mountPath: /config
        - name: intermediate
          mountPath: /intermediate
        - name: media
          mountPath: /media
        ports:
        - name: nzbget
          containerPort: 6789
        readinessProbe:
          tcpSocket:
            port: nzbget
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: nzbget
          initialDelaySeconds: 15
          periodSeconds: 20
      # affinity:
      #   podAntiAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #     - weight: 100
      #       podAffinityTerm:
      #         labelSelector:
      #           matchExpressions:
      #           - key: app
      #             operator: In
      #             values:
      #             - pms
      #         topologyKey: kubernetes.io/hostname
