media/nzbget/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nzbget
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://login.desertbluffs.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.desertbluffs.com/oauth2/start?rd=https://$host$request_uri"
spec:
  tls:
  - hosts:
    - c.desertbluffs.com
  rules:
  - host: c.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nzbget
          servicePort: 6789
