media/nzbget/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nzbget
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: nzbget
  ingress:
  - ports:
    - port: 6789
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    - podSelector:
        matchLabels:
          app: sonarr
    - podSelector:
        matchLabels:
          app: radarr
    - podSelector:
        matchLabels:
          app: radarr4k
